# memory

./: .gitignore  Cargo.toml  README.md  TODO  pubspec.yaml
lib/: main.dart
src/: main.rs
test/: widget_test.dart
ui/: main.slint
